...
    return null;
  }

  if (!habits.length) {
    return (
      <View style={styles.emptyContainer}>
        <Text style={styles.emptyText}>You have no habits set</Text>
        <Link href="/add-habit" asChild>
          <Pressable style={styles.createButton}>
            <Text style={styles.createButtonText}>Create Habit</Text>
          </Pressable>
        </Link>
      </View>
    );
  }

...
